syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "carpool.proto";
option go_package = "github.com/rickyjia2018/peakpal-carpool/pb";

message CreateCarpoolRequest {
    string contact_info = 1;
    int64 driver_id = 2;
    uint64 max_passenger = 3;
    uint64 price = 4;
    bool able_pick_up = 5;
    uint64 resort_id =6;
    string accept_payment_type = 9;
    string currency = 10;
    google.protobuf.Timestamp departure_at = 11;
}
 
message CreateCarpoolResponse {
    Carpool carpool = 1;
}